--- a/sicongliu.html
+++ b/sicongliu.html
@@ -59,13 +59,13 @@
 			<div class="summary">Lorem ipsum dolor sit amet nullam dignissim</div>
 -->
 <h3></h3>
-<p><b>Sicong Liu</b> received his B.S.E. in electronic engineering from Tsinghua University, Beijing, China in 2012, and the PhD degree,  supervised by Prof. Jian Song (IEEE Fellow), in electronic engineering in Tsinghua University in 2017 with the highest honor. From 2010 to 2011, he was a visiting student in Dept. Electronic and Communications Engineering, City University of Hong Kong.  Currently, he is an assistant professor in School of Informatics, Xiamen University.</p>
+<p><b>Sicong Liu</b> received his B.S.E. in electronic engineering from Tsinghua University, Beijing, China in 2012. He received his PhD degree in electronic engineering with highest honor in Tsinghua University in 2017, supervised by Prof. Jian Song (IEEE Fellow). From 2010 to 2011, he was a visiting student in Dept. Electronic and Communications Engineering, City University of Hong Kong.  Currently, he is an assistant professor in School of Informatics, Xiamen University.</p>
 			   
 <p>Sicong Liu has published over 40 journal and conference research papers. He owns 8 Chinese invention patents.
 	He has contributed to the drafting of the Broadband Power Line Communications Standard in China.
 	He has won Second Prize in the Natural Science Award of Chinese Institute of Electronics (ranking 3) and the Outstanding Doctoral Dissertation Award of Tsinghua University.
 	He served as a the publication chair in IEEE SmartGridComm 2019, and TPC member in many international academic conferences including IEEE ICC/Globecom, etc.  He has served as a Guest Editor for the Future Internet Journal. He is a member of IEEE.</p>
-<p>His current research interests  lie in sparse signal processing, interference suppression, communication security, wireless communications, visible light communications, underwater acoustic communications, and machine learning.</p>
+<p>His current research interests  lie in sparse signal processing, compressed sensing, communication security, wireless communications, visible light communications, underwater acoustic communications, and machine learning.</p>
 
 			<h3>Education and Research Experiences</h3>
 			<p><b>Mar. 2018 - Present</b> &nbsp;&nbsp; Assistant Professor, School of Informatics, Xiamen University</p>
