--- a/sicongliu.html
+++ b/sicongliu.html
@@ -41,7 +41,7 @@
 					</div>
 					<h2>Dr. Sicong Liu (劉思聰)</h2>
 					<p>PhD, Tsinghua University</p>
-					<p>Assistant Professor, School of Informatics, Xiamen University</p>
+					<p>Special Associate Researcher, Assistant Professor, School of Informatics, Xiamen University</p>
 					<p>Address: Haiyun Campus, Xiamen University, Xiamen 361005, China P.R.</p>
 					<p>E-mail: liusc at xmu dot edu dot cn/ liusc1028 at gmail dot com</p>
 									<br><br>
@@ -59,16 +59,17 @@
 			<div class="summary">Lorem ipsum dolor sit amet nullam dignissim</div>
 -->
 <h3></h3>
-<p><b>Sicong Liu</b> received his B.S.E. in electronic engineering from Tsinghua University, Beijing, China in 2012. He received his PhD degree in electronic engineering with highest honor in Tsinghua University in 2017, supervised by Prof. Jian Song (IEEE Fellow). From 2010 to 2011, he was a visiting student in Dept. Electronic and Communications Engineering, City University of Hong Kong.  Currently, he is an assistant professor in School of Informatics, Xiamen University.</p>
+<p><b>Sicong Liu</b> received his B.S.E. in electronic engineering from Tsinghua University, Beijing, China in 2012. He received his PhD degree in electronic engineering with highest honor in Tsinghua University in 2017, supervised by Prof. Jian Song (IEEE Fellow). From 2010 to 2011, he was a visiting student in Dept. Electronic and Communications Engineering, City University of Hong Kong.  Currently, he is a Special Associate Researcher and an Assistant Professor in School of Informatics, Xiamen University.</p>
 			   
 <p>Sicong Liu has published over 40 journal and conference research papers. He owns 8 Chinese invention patents.
 	He has contributed to the drafting of the Broadband Power Line Communications Standard in China.
 	He has won Second Prize in the Natural Science Award of Chinese Institute of Electronics (ranking 3) and the Outstanding Doctoral Dissertation Award of Tsinghua University.
-	He served as a the publication chair in IEEE SmartGridComm 2019, and TPC member in many international academic conferences including IEEE ICC/Globecom, etc.  He has served as a Guest Editor for the Future Internet Journal. He is a member of IEEE.</p>
+	He served as a the publication chair in IEEE SmartGridComm 2019, and TPC member in many international academic conferences including IEEE ICC/Globecom, etc.  He serves in the Editorial Board of academic journals including Future Internet Journal and Frontiers in Communications and Networks. He is a member of IEEE.</p>
 <p>His current research interests  lie in sparse signal processing, compressed sensing, communication security, wireless communications, visible light communications, underwater acoustic communications, and machine learning.</p>
 
-			<h3>Education and Research Experiences</h3>
-			<p><b>Mar. 2018 - Present</b> &nbsp;&nbsp; Assistant Professor, School of Informatics, Xiamen University</p>
+			<h3>Education and Academic Experiences</h3>
+			<p><b>Jun. 2020 - Present</b> &nbsp;&nbsp; Special Associate Researcher, Assistant Professor, School of Informatics, Xiamen University</p>
+			<p><b>Mar. 2018 - Jun. 2020</b> &nbsp;&nbsp; Assistant Professor, School of Informatics, Xiamen University</p>
 			<!--<p><b>Jul.2017-Jan. 2018</b> &nbsp;&nbsp; Senior Research Engineer, Research Dept. Network Technologies, Huawei Technologies Co. Ltd</p>-->
 			<p><b>Aug.2012-Jul.2017</b> &nbsp;&nbsp;Ph.D., Department of Electronic Engineering, Tsinghua University, supervised by Prof. Jian Song</p>
 			<p><b>Aug.2010-Jan.2011</b>  Visiting Student, College of Science and Engineering, City University of Hong Kong, Hong Kong</p>
@@ -193,7 +194,7 @@
 		<span id="busuanzi_container_site_uv" >| tus <span id="busuanzi_value_site_uv"></span> </span>
 		<br>
 
-		Last updatd May 2020 | copyright &copy; <b>Sicong Liu</b>.
+		Last updatd June 2020 | copyright &copy; <b>Sicong Liu</b>.
 	</div>
 </div>
 
