--- a/sicongliu.html
+++ b/sicongliu.html
@@ -41,7 +41,7 @@
 					</div>
 					<h2>Dr. Sicong Liu (劉思聰)</h2>
 					<p>PhD, Tsinghua University</p>
-					<p>Special Associate Researcher, Assistant Professor, School of Informatics, Xiamen University</p>
+					<p>Specially Appointed Associate Researcher, Assistant Professor, School of Informatics, Xiamen University</p>
 					<p>Address: Haiyun Campus, Xiamen University, Xiamen 361005, China P.R.</p>
 					<p>E-mail: liusc at xmu dot edu dot cn/ liusc1028 at gmail dot com</p>
 									<br><br>
@@ -68,7 +68,7 @@
 <p>His current research interests  lie in sparse signal processing, compressed sensing, communication security, wireless communications, visible light communications, underwater acoustic communications, and machine learning.</p>
 
 			<h3>Education and Academic Experiences</h3>
-			<p><b>Jun. 2020 - Present</b> &nbsp;&nbsp; Special Associate Researcher, Assistant Professor, School of Informatics, Xiamen University</p>
+			<p><b>Jun. 2020 - Present</b> &nbsp;&nbsp; Specially Appointed Associate Researcher, School of Informatics, Xiamen University</p>
 			<p><b>Mar. 2018 - Jun. 2020</b> &nbsp;&nbsp; Assistant Professor, School of Informatics, Xiamen University</p>
 			<!--<p><b>Jul.2017-Jan. 2018</b> &nbsp;&nbsp; Senior Research Engineer, Research Dept. Network Technologies, Huawei Technologies Co. Ltd</p>-->
 			<p><b>Aug.2012-Jul.2017</b> &nbsp;&nbsp;Ph.D., Department of Electronic Engineering, Tsinghua University, supervised by Prof. Jian Song</p>
@@ -114,6 +114,8 @@
 
 <br>
 <p><strong>Conferences</strong></p>
+<p>&bull; X. Huang, <b>S. Liu</b>*, "<a target="blank" href="https://ieeexplore.ieee.org/document/9145126">Massive MIMO Channel Estimation for Vehicular Communications: A Deep Learning Based Approach</a>,” <i>2020 IEEE International Conference on Communications (ICC) Workshops</i>, Dublin, Ireland, June 2020.</p>
+<p>&bull; W. Wang, X. Lu, <b>S. Liu</b>*, L. Xiao, B. Yang, "<a target="blank" href="https://ieeexplore.ieee.org/document/9128716">Energy Efficient Relay in UAV Networks Against Jamming: A Reinforcement Learning Based Approach</a>,” <i>2020 IEEE 91st Vehicular Technology Conference (VTC2020-Spring)</i>, Antwerp, Belgium, May 2020.</p>
 <p>&bull; Y. Ding, D. Jiang, J. Huang, L. Xiao, <b>S. Liu</b>*, Y. Tang, H. Dai, "<a target="blank" href="https://ieeexplore.ieee.org/document/9014064">QoE-Aware Power Control for UAV-Aided Media Transmission with Reinforcement Learning</a>,” <i>2019 IEEE Global Communications Conference (GLOBECOM)</i>, Waikoloa, HI, USA, 2019, pp. 1-6.</p>
 <p>&bull; H. Zhang, M. Min, L. Xiao, <b>S. Liu</b>*, P. Cheng and M. Peng, "<a target="blank" href="https://ieeexplore.ieee.org/document/8648136">Reinforcement Learning-Based Interference Control for Ultra-Dense Small Cells</a>,” <i>2018 IEEE Global Communications Conference (GLOBECOM)</i>, Abu Dhabi, United Arab Emirates, 2018, pp. 1-6.</p>
 <p>&bull; Z. Xiao, B. Gao, <b>S. Liu</b>* and L. Xiao, "<a target="blank" href="https://ieeexplore.ieee.org/document/8647173">Learning Based Power Control for mmWave Massive MIMO against Jamming</a>,” <i>2018 IEEE Global Communications Conference (GLOBECOM)</i>, Abu Dhabi, United Arab Emirates, 2018, pp. 1-6.</p>
@@ -143,6 +145,10 @@
 					<p>
 						<img src="images/book_phei.jpg" width = 120/>						
 					</p>
+	<p>&bull; F. Yang, <b>S. Liu</b>, Z. Gao, "New Air Interface Technologies for 5G Mobile Communications," <i>Beijing: Publishing House of Electronics Industry</i>, July 2020, ISBN: 978-7-121-39193-4.</p>
+	<p>
+		<img src="images/book_5G.jpg" width = 120/>
+	</p>
 
 <h3>Research Grants</h3>
 <p>&bull; "Research on sparse interference cancelation methods for ultra-reliable vehicular communications," National Natural Science Foundation of China Youth Fund (No.61901403), 2020.01-2022.12 (PI). </p>
@@ -194,7 +200,7 @@
 		<span id="busuanzi_container_site_uv" >| tus <span id="busuanzi_value_site_uv"></span> </span>
 		<br>
 
-		Last updatd June 2020 | copyright &copy; <b>Sicong Liu</b>.
+		Last updatd Aug. 2020 | copyright &copy; <b>Sicong Liu</b>.
 	</div>
 </div>
 
