--- a/sicongliu.html
+++ b/sicongliu.html
@@ -142,12 +142,10 @@
 
 <p><strong>Book Chapters</strong></p>
 	<p>&bull; <b>S. Liu</b>, F. Yang, J. Song, "Non-Gaussian Noise and Interference Mitigation and Cancelation:From Classical Signal Processing to Compressed Sensing Methods," <i>Beijing: Publishing House of Electronics Industry</i>, May 2019, ISBN: 978-7-121-36455-6.</p>
-					<p>
-						<img src="images/book_phei.jpg" width = 120/>						
-					</p>
+
 	<p>&bull; F. Yang, <b>S. Liu</b>, Z. Gao, "New Air Interface Technologies for 5G Mobile Communications," <i>Beijing: Publishing House of Electronics Industry</i>, July 2020, ISBN: 978-7-121-39193-4.</p>
 	<p>
-		<img src="images/book_5G.jpg" width = 120/>
+		<img src="images/book_phei.jpg" width = 140/> <img src="images/book_5G.jpg" width = 120/>
 	</p>
 
 <h3>Research Grants</h3>
