--- a/sicongliu.html
+++ b/sicongliu.html
@@ -141,11 +141,13 @@
 			<!--<p>&bull; 刘思聪，杨昉，宋健，李建岐，刘伟麟；基于压缩感知的窄带干扰重构与消除；电视技术，2014(19), pp.128-130.</p>-->
 
 <p><strong>Book Chapters</strong></p>
+	<p>&bull; <b>S. Liu</b>, "Research on the Key Technologies in Narrowband Interference and Impulsive Noise Mitigation and Cancellation," <i>Springer</i>, Sep. 2020, ISBN: 978-981-15-4723-2.</p>
+
 	<p>&bull; <b>S. Liu</b>, F. Yang, J. Song, "Non-Gaussian Noise and Interference Mitigation and Cancelation:From Classical Signal Processing to Compressed Sensing Methods," <i>Beijing: Publishing House of Electronics Industry</i>, May 2019, ISBN: 978-7-121-36455-6.</p>
 
 	<p>&bull; F. Yang, <b>S. Liu</b>, Z. Gao, "New Air Interface Technologies for 5G Mobile Communications," <i>Beijing: Publishing House of Electronics Industry</i>, July 2020, ISBN: 978-7-121-39193-4.</p>
 	<p>
-		<img src="images/book_phei.jpg" width = 140/> <img src="images/book_5G.jpg" width = 120/>
+		<img src="images/book_springer_research_on_key_tech.bmp" width = 140/> <img src="images/book_phei.jpg" width = 140/> <img src="images/book_5G.jpg" width = 120/>
 	</p>
 
 <h3>Research Grants</h3>
