--- a/sicongliu.html
+++ b/sicongliu.html
@@ -39,11 +39,13 @@
 						<img src="images/head.jpg" width = 120 alt="Figure 1" />
 						
 					</div>
-					<h2>Dr. Sicong Liu (劉思聰)</h2>
-					<p>PhD, Tsinghua University</p>
+					<h2>Dr. Sicong Liu 刘思聪</h2>
+					<p>厦门大学信息学院 特聘副研究员、助理教授、硕士生导师, 清华大学电子工程系 博士</p>
 					<p>Specially Appointed Associate Researcher, Assistant Professor, School of Informatics, Xiamen University</p>
+					<p>PhD, Electronic Engineering, Tsinghua University</p>
+					<p>地址：福建省厦门市思明区厦门大学海韵园，邮编：361005</p>
 					<p>Address: Haiyun Campus, Xiamen University, Xiamen 361005, China P.R.</p>
-					<p>E-mail: liusc at xmu dot edu dot cn/ liusc1028 at gmail dot com</p>
+					<p>E-mail: 1) liusc at xmu dot edu dot cn  2) liusc1028 at gmail dot com</p>
 									<br><br>
 				</div>
 			</div>
@@ -58,27 +60,47 @@
 			<div class="divider"></div>
 			<div class="summary">Lorem ipsum dolor sit amet nullam dignissim</div>
 -->
-<h3></h3>
+<h3>个人简介 Biography</h3>
+	<p><b>刘思聪</b> 于2012年毕业于清华大学电子工程系本科获电子信息科学与技术学士学位，2017年获清华大学电子工程系信息与通信工程博士学位，
+		博士导师为宋健教授（IEEE会士）,并评为清华大学优秀博士毕业生。2010至2011年间赴香港城市大学电子工程学系交流访学。现任厦门大学信息学院
+		特聘副研究员、助理教授、硕士生导师。</p>
+
+	<p>已发表50余篇期刊与会议学术论文，获得8项发明专利授权。担任宽带电力载波通信国家标准起草人。获中国电子学会自然科学二等奖（排名第3）、福建省科技进步三等奖（排名第3）、
+		清华大学优秀博士学位论文奖。担任国际智能电网信息通信大会IEEE SmartGridComm 2019大会出版主席，以及包括IEEE ICC/Globecom在内的多个国际知名学术会议
+		技术程序委员会委员。担任Frontiers in Communications and Networks 和 Future Internet Journal等国际学术期刊编委。
+		中国通信学会高级会员、IEEE会员、ACM会员、中国电子学会会员。</p>
+
+	<p>目前的研究兴趣为无线通信中的稀疏与智能方法，主要包括稀疏信号处理、压缩感知、机器学习等核心技术，及其在无线通信、可见光通信、无线安全和物联网等领域的关键应用。</p>
+
+
 <p><b>Sicong Liu</b> received his B.S.E. in electronic engineering from Tsinghua University, Beijing, China in 2012. He received his PhD degree in electronic engineering with highest honor in Tsinghua University in 2017, supervised by Prof. Jian Song (IEEE Fellow). From 2010 to 2011, he was a visiting student in Dept. Electronic and Communications Engineering, City University of Hong Kong.  Currently, he is a Special Associate Researcher and an Assistant Professor in School of Informatics, Xiamen University.</p>
 			   
-<p>Sicong Liu has published over 40 journal and conference research papers. He owns 8 Chinese invention patents.
+<p>Sicong Liu has published over 50 journal and conference research papers. He owns 8 Chinese invention patents.
 	He has contributed to the drafting of the Broadband Power Line Communications Standard in China.
-	He has won Second Prize in the Natural Science Award of Chinese Institute of Electronics (ranking 3) and the Outstanding Doctoral Dissertation Award of Tsinghua University.
+	He has won Second Prize in the Natural Science Award of Chinese Institute of Electronics (ranking 3), the Third Prize in the Scientific Progress Award of Fujian Province (ranking 3), and the Outstanding Doctoral Dissertation Award of Tsinghua University.
 	He served as a the publication chair in IEEE SmartGridComm 2019, and TPC member in many international academic conferences including IEEE ICC/Globecom, etc.  He serves in the Editorial Board of academic journals including Future Internet Journal and Frontiers in Communications and Networks. He is a member of IEEE.</p>
-<p>His current research interests  lie in sparse signal processing, compressed sensing, communication security, wireless communications, visible light communications, underwater acoustic communications, and machine learning.</p>
+<p>His current research interests  lie in sparse and intelligent methods in wireless communications, mainly including key technologies of
+	sparse signal processing, compressed sensing, and machine learning, and related typical applications in wireless communications, visible light communications, wireless security, and internet of things.</p>
 
-			<h3>Education and Academic Experiences</h3>
-			<p><b>Jun. 2020 - Present</b> &nbsp;&nbsp; Specially Appointed Associate Researcher, School of Informatics, Xiamen University</p>
-			<p><b>Mar. 2018 - Jun. 2020</b> &nbsp;&nbsp; Assistant Professor, School of Informatics, Xiamen University</p>
-			<!--<p><b>Jul.2017-Jan. 2018</b> &nbsp;&nbsp; Senior Research Engineer, Research Dept. Network Technologies, Huawei Technologies Co. Ltd</p>-->
-			<p><b>Aug.2012-Jul.2017</b> &nbsp;&nbsp;Ph.D., Department of Electronic Engineering, Tsinghua University, supervised by Prof. Jian Song</p>
-			<p><b>Aug.2010-Jan.2011</b>  Visiting Student, College of Science and Engineering, City University of Hong Kong, Hong Kong</p>
-			<p><b>Aug.2008-Jul.2012</b> &nbsp;Bachelor, Department of Electronic Engineering, Tsinghua University</p>
+	<h3>教育学术经历 Education and Academic Experiences</h3>
+	<p><b>2020年6月 - 至今</b> &nbsp;&nbsp; 厦门大学信息学院，特聘副研究员</p>
+	<p><b>2018年3月 - 2020年6月</b> &nbsp;&nbsp; 厦门大学信息学院，助理教授</p>
+	<p><b>2017年7月 - 2018年1月</b> &nbsp;&nbsp; 华为技术有限公司网络技术研究部，高级工程师</p>
+	<!-<b>2012年8月 - 2017年7月</b> &nbsp;&nbsp;清华大学电子工程系，攻读信息与通信工程博士学位，导师宋健教授</p>
+	<p><b>2010年8月 - 2011年1月</b> 香港城市大学电子工程学系，交流访学</p>
+	<p><b>2008年8月 - 2012年7月</b> &nbsp;清华大学电子工程系，本科</p>
+
+	<p><b>Jun. 2020 - Present</b> &nbsp;&nbsp; Specially Appointed Associate Researcher, School of Informatics, Xiamen University</p>
+	<p><b>Mar. 2018 - Jun. 2020</b> &nbsp;&nbsp; Assistant Professor, School of Informatics, Xiamen University</p>
+	<p><b>Jul.2017-Jan. 2018</b> &nbsp;&nbsp; Senior Research Engineer, Research Dept. Network Technologies, Huawei Technologies Co. Ltd</p>
+	<p><b>Aug.2012-Jul.2017</b> &nbsp;&nbsp;Ph.D., Department of Electronic Engineering, Tsinghua University, supervised by Prof. Jian Song</p>
+	<p><b>Aug.2010-Jan.2011</b>  Visiting Student, College of Science and Engineering, City University of Hong Kong, Hong Kong</p>
+	<p><b>Aug.2008-Jul.2012</b> &nbsp;Bachelor, Department of Electronic Engineering, Tsinghua University</p>
 
 
-<h3>Selected Publications</h3>
+<h3>发表论文 Selected Publications</h3>
 
-<p><strong>Journals</strong></p>
+<p><strong>期刊论文 Journals</strong></p>
 
 <p>&bull; L. Xiao, H. Zhang, Y. Xiao, X. Wan, <b>S. Liu</b>, L.-C. Wang, and H. V. Poor, "Reinforcement Learning-Based Downlink Interference Control for Ultra-Dense Small Cells," <i>IEEE Transactions on Wireless Communications</i>, vol. 19, no. 1, pp. 423-434, Jan. 2020.[<a target="blank" href="https://ieeexplore.ieee.org/document/8868117">Abstract</a>][<a target="blank"  href="papers/TWC19.pdf">PDF</a>][<a target="blank"  href="papers/TWC19.bib">bibtex</a>]</p>
 
@@ -113,7 +135,7 @@
 <p>&bull; Wenbo Ding, Yang Lu, Fang Yang, Wei Dai, Pan Li, <b>Sicong Liu</b>, and Jian Song, "Spectrally Efficient CSI Acquisition for Power Line Communications: A Bayesian Compressive Sensing Perspective," in IEEE Journal on Selected Areas in Communications, vol. 34, no. 7, pp. 2022-2032, July 2016.</p>
 
 <br>
-<p><strong>Conferences</strong></p>
+<p><strong>会议论文 Conferences</strong></p>
 <p>&bull; X. Huang, <b>S. Liu</b>*, "<a target="blank" href="https://ieeexplore.ieee.org/document/9145126">Massive MIMO Channel Estimation for Vehicular Communications: A Deep Learning Based Approach</a>,” <i>2020 IEEE International Conference on Communications (ICC) Workshops</i>, Dublin, Ireland, June 2020.</p>
 <p>&bull; W. Wang, X. Lu, <b>S. Liu</b>*, L. Xiao, B. Yang, "<a target="blank" href="https://ieeexplore.ieee.org/document/9128716">Energy Efficient Relay in UAV Networks Against Jamming: A Reinforcement Learning Based Approach</a>,” <i>2020 IEEE 91st Vehicular Technology Conference (VTC2020-Spring)</i>, Antwerp, Belgium, May 2020.</p>
 <p>&bull; Y. Ding, D. Jiang, J. Huang, L. Xiao, <b>S. Liu</b>*, Y. Tang, H. Dai, "<a target="blank" href="https://ieeexplore.ieee.org/document/9014064">QoE-Aware Power Control for UAV-Aided Media Transmission with Reinforcement Learning</a>,” <i>2019 IEEE Global Communications Conference (GLOBECOM)</i>, Waikoloa, HI, USA, 2019, pp. 1-6.</p>
@@ -140,27 +162,51 @@
 
 			<!--<p>&bull; 刘思聪，杨昉，宋健，李建岐，刘伟麟；基于压缩感知的窄带干扰重构与消除；电视技术，2014(19), pp.128-130.</p>-->
 
-<p><strong>Book Chapters</strong></p>
-	<p>&bull; <b>S. Liu</b>, "Research on the Key Technologies in Narrowband Interference and Impulsive Noise Mitigation and Cancellation," <i>Springer</i>, Sep. 2020, ISBN: 978-981-15-4723-2.</p>
+<p><strong>出版专著 Book Chapters</strong></p>
+	<p>&bull; <b>Sicong Liu</b>, "Research on the Key Technologies in Narrowband Interference and Impulsive Noise Mitigation and Cancellation," <i>Springer</i>, Sep. 2020, ISBN: 978-981-15-4723-2.</p>
 
-	<p>&bull; <b>S. Liu</b>, F. Yang, J. Song, "Non-Gaussian Noise and Interference Mitigation and Cancelation:From Classical Signal Processing to Compressed Sensing Methods," <i>Beijing: Publishing House of Electronics Industry</i>, May 2019, ISBN: 978-7-121-36455-6.</p>
+	<p>&bull; <b>刘思聪</b>，杨昉，宋健，“非高斯特殊噪声干扰的抑制与消除：从经典信号处理到压缩感知方法”，北京：电子工业出版社，2019年5月</p>
+	<p>&nbsp;&nbsp;&nbsp;<b>S. Liu</b>, F. Yang, J. Song, "Non-Gaussian Noise and Interference Mitigation and Cancellation:From Classical Signal Processing to Compressed Sensing Methods," <i>Beijing: Publishing House of Electronics Industry</i>, May 2019, ISBN: 978-7-121-36455-6.</p>
 
-	<p>&bull; F. Yang, <b>S. Liu</b>, Z. Gao, "New Air Interface Technologies for 5G Mobile Communications," <i>Beijing: Publishing House of Electronics Industry</i>, July 2020, ISBN: 978-7-121-39193-4.</p>
+	<p>&bull; 杨昉，<b>刘思聪</b>，高镇，“5G移动通信空口新技术”，北京：电子工业出版社，2020年7月</p>
+	<p> &nbsp; &nbsp; F. Yang, <b>S. Liu</b>, Z. Gao, "New Air Interface Technologies for 5G Mobile Communications," <i>Beijing: Publishing House of Electronics Industry</i>, July 2020, ISBN: 978-7-121-39193-4.</p>
 	<p>
 		<img src="images/book_springer_research_on_key_tech.bmp" width = 120/> <img src="images/book_phei.jpg" width = 140/> <img src="images/book_5G.jpg" width = 120/>
 	</p>
 
-<h3>Research Grants</h3>
-<p>&bull; "Research on sparse interference cancelation methods for ultra-reliable vehicular communications," National Natural Science Foundation of China Youth Fund (No.61901403), 2020.01-2022.12 (PI). </p>
-<p>&bull; "Study on compressed sensing and sparse learning technologies for next-generation wireless communications," Natural Science Foundation of Fujian Province of China (No.2019J05001), 2019.07-2022.06 (PI). </p>
-<p>&bull; "Study on key technologies of 5G wireless communications based on compressed sensing and machine learning," Fundamental Research Funds for the Central Universities of China (No.20720190029), 2019.01-2019.12 (PI). </p>
+<h3>科研项目 Research Grants</h3>
+	<p>&bull; 面向高可靠车联网通信的稀疏干扰消除方法研究，国家自然科学基金青年基金 （项目编号 61901403），2020年1月-2022年12月，主持</p>
+	<p>&nbsp;&nbsp; "Research on sparse interference cancellation methods for ultra-reliable vehicular communications," National Natural Science Foundation of China Youth Fund (No.61901403), 2020.01-2022.12 (PI). </p>
+	<p>&bull; 面向新一代无线通信的多重压缩感知与稀疏学习技术研究，福建省自然科学基金（2019J05001），2019年7月-2022年6月，主持</p>
+	<p>&nbsp; "Study on compressed sensing and sparse learning technologies for next-generation wireless communications," Natural Science Foundation of Fujian Province of China (No.2019J05001), 2019.07-2022.06 (PI). </p>
+	<p>&bull; 复杂5G无线环境下的稀疏干扰智能消除方法，厦门市青年创新基金（3502Z20206039），2020年7月-2023年6月，主持</p>
+	<p>&nbsp; "Intelligent Methods of Sparse Interference Mitigation for Complex 5G Wireless Environments", the Youth Innovation Fund of Xiamen (No.3502Z20206039), 2020.07-2023.06 (PI)</p>
+	<p>&bull; 基于压缩感知与机器学习的5G无线通信关键技术研究，中央高校基本科研项目（20720190029），2019年1月-2019年12月，主持</p>
+	<p>&nbsp; "Study on key technologies of 5G wireless communications based on compressed sensing and machine learning," Fundamental Research Funds for the Central Universities of China (No.20720190029), 2019.01-2019.12 (PI). </p>
+	<p>&bull; 基于机器学习稀疏干扰对抗车联网安全，美亚柏科产学研项目，2018年12月-2020年6月，主持</p>
+	<p>&nbsp; "Machine learning based sparse interference countermeasure for vehicle networks security," Joint Research Project with Meiya Pico, 2019.12-2020.06 (PI). </p>
 
 
-<h3>Honors and Awards</h3>
-<p>&bull; Second Prize in the Natural Science Award of Chinese Institute of Electronics (ranking 3), 2019 </p>
+<h3>荣誉奖励 Honors and Awards</h3>
+	<p>&bull; 中国电子学会自然科学二等奖（排名第3），2019 </p>
+	<p>&bull; 福建省科技进步三等奖（排名第3），2019 </p>
+	<p>&bull; 福建省引进高层次人才（B类），2019 </p>
+	<p>&bull; 清华大学优秀博士学位论文奖, 2017 </p>
+	<p>&bull; 清华大学优秀博士毕业生, 2017 </p>
+	<p>&bull; 北京市优秀毕业生, 2017 </p>
+	<p>&bull; 清华大学电子系“电子之星”奖（科创类）, 2017 </p>
+	<p>&bull; 清华大学电子系“学术新秀”奖, 2016 </p>
+	<p>&bull; 博士研究生国家奖学金, 2016</p>
+	<p>&bull; 清华大学优秀研究生支持计划暨唐立新奖学金, 2015</p>
+	<p>&bull; 硕士研究生国家奖学金, 2014</p>
+	<p>&bull; 清华大学本科优良毕业生, 2012</p>
+<p>&bull; Second Prize in the Natural Science Award of Chinese Institute of Electronics (ranking 3rd), 2019 </p>
+<p>&bull; Third Prize of Fujian Science and Technology Progress Award (ranking 3rd), 2019 </p>
+<p>&bull; Fujian High-Level Introduced Talents (Type B), 2019 </p>
 <p>&bull; Outstanding Doctoral Dissertation Award of Tsinghua University, 2017 </p>
 <p>&bull; Outstanding PhD Graduate Award of Tsinghua University, 2017 </p>
 <p>&bull; Outstanding Graduate Award of Beijing City, 2017 </p>
+<p>&bull; The EE Star Award in Science and Innovation, Tsinghua University, 2017 </p>
 <p>&bull; Outstanding Academic Youth Award, Department of EE, Tsinghua University, 2016 </p>
 <p>&bull; National Scholarship for PhD Graduates, 2016</p>
 <p>&bull; The Tsinghua Excellent Graduate Students Support Project and Tang-Lixin Scholarship, 2015</p>
