--- a/sicongliu.html
+++ b/sicongliu.html
@@ -40,7 +40,7 @@
 						
 					</div>
 					<h2>Dr. Sicong Liu 刘思聪</h2>
-					<p>厦门大学信息学院 特聘副研究员、助理教授、硕士生导师, 清华大学电子工程系 博士</p>
+					<p>厦门大学信息学院 特聘副研究员、助理教授, 清华大学电子工程系 博士</p>
 					<p>Specially Appointed Associate Researcher, Assistant Professor, School of Informatics, Xiamen University</p>
 					<p>PhD, Electronic Engineering, Tsinghua University</p>
 					<p>地址：福建省厦门市思明区厦门大学海韵园，邮编：361005</p>
@@ -65,7 +65,7 @@
 		博士导师为宋健教授（IEEE会士）,并评为清华大学优秀博士毕业生。2010至2011年间赴香港城市大学电子工程学系交流访学。现任厦门大学信息学院
 		特聘副研究员、助理教授、硕士生导师。</p>
 
-	<p>已发表50余篇期刊与会议学术论文，获得8项发明专利授权。担任宽带电力载波通信国家标准起草人。获中国电子学会自然科学二等奖（排名第3）、福建省科技进步三等奖（排名第3）、
+	<p>已发表50余篇期刊与会议学术论文，获得8项发明专利授权。担任宽带电力载波通信国家标准起草人。获评为福建省引进高层次人才（B类）。获中国电子学会自然科学二等奖（排名第3）、福建省科技进步三等奖（排名第3）、
 		清华大学优秀博士学位论文奖。担任国际智能电网信息通信大会IEEE SmartGridComm 2019大会出版主席，以及包括IEEE ICC/Globecom在内的多个国际知名学术会议
 		技术程序委员会委员。担任Frontiers in Communications and Networks 和 Future Internet Journal等国际学术期刊编委。
 		中国通信学会高级会员、IEEE会员、ACM会员、中国电子学会会员。</p>
@@ -78,7 +78,9 @@
 <p>Sicong Liu has published over 50 journal and conference research papers. He owns 8 Chinese invention patents.
 	He has contributed to the drafting of the Broadband Power Line Communications Standard in China.
 	He has won Second Prize in the Natural Science Award of Chinese Institute of Electronics (ranking 3), the Third Prize in the Scientific Progress Award of Fujian Province (ranking 3), and the Outstanding Doctoral Dissertation Award of Tsinghua University.
-	He served as a the publication chair in IEEE SmartGridComm 2019, and TPC member in many international academic conferences including IEEE ICC/Globecom, etc.  He serves in the Editorial Board of academic journals including Future Internet Journal and Frontiers in Communications and Networks. He is a member of IEEE.</p>
+	He served as a the publication chair in IEEE SmartGridComm 2019, and TPC member in many international academic conferences including IEEE ICC/Globecom, etc.
+	He serves in the Editorial Board of academic journals including Future Internet Journal and Frontiers in Communications and Networks.
+	He is a senior member of China Institute of Communications (CIC), and a member of IEEE, ACM, and China Institute of Electronics (CIE).</p>
 <p>His current research interests  lie in sparse and intelligent methods in wireless communications, mainly including key technologies of
 	sparse signal processing, compressed sensing, and machine learning, and related typical applications in wireless communications, visible light communications, wireless security, and internet of things.</p>
 
@@ -86,7 +88,7 @@
 	<p><b>2020年6月 - 至今</b> &nbsp;&nbsp; 厦门大学信息学院，特聘副研究员</p>
 	<p><b>2018年3月 - 2020年6月</b> &nbsp;&nbsp; 厦门大学信息学院，助理教授</p>
 	<p><b>2017年7月 - 2018年1月</b> &nbsp;&nbsp; 华为技术有限公司网络技术研究部，高级工程师</p>
-	<!-<b>2012年8月 - 2017年7月</b> &nbsp;&nbsp;清华大学电子工程系，攻读信息与通信工程博士学位，导师宋健教授</p>
+	<b>2012年8月 - 2017年7月</b> &nbsp;&nbsp;清华大学电子工程系，攻读信息与通信工程博士学位，导师宋健教授</p>
 	<p><b>2010年8月 - 2011年1月</b> 香港城市大学电子工程学系，交流访学</p>
 	<p><b>2008年8月 - 2012年7月</b> &nbsp;清华大学电子工程系，本科</p>
 
