--- a/sicongliu.html
+++ b/sicongliu.html
@@ -88,7 +88,7 @@
 	<p><b>2020年6月 - 至今</b> &nbsp;&nbsp; 厦门大学信息学院，特聘副研究员</p>
 	<p><b>2018年3月 - 2020年6月</b> &nbsp;&nbsp; 厦门大学信息学院，助理教授</p>
 	<p><b>2017年7月 - 2018年1月</b> &nbsp;&nbsp; 华为技术有限公司网络技术研究部，高级工程师</p>
-	<b>2012年8月 - 2017年7月</b> &nbsp;&nbsp;清华大学电子工程系，攻读信息与通信工程博士学位，导师宋健教授</p>
+	<p><b>2012年8月 - 2017年7月</b> &nbsp;&nbsp;清华大学电子工程系，攻读信息与通信工程博士学位，导师宋健教授</p>
 	<p><b>2010年8月 - 2011年1月</b> 香港城市大学电子工程学系，交流访学</p>
 	<p><b>2008年8月 - 2012年7月</b> &nbsp;清华大学电子工程系，本科</p>
 
