--- a/sicongliu.html
+++ b/sicongliu.html
@@ -46,7 +46,8 @@
 					<p>地址：福建省厦门市思明区厦门大学海韵园，邮编：361005</p>
 					<p>Address: Haiyun Campus, Xiamen University, Xiamen 361005, China P.R.</p>
 					<p>E-mail: 1) liusc at xmu dot edu dot cn  2) liusc1028 at gmail dot com</p>
-					<a target="blank" href="https://scholar.google.com/citations?user=FjTr1C8AAAAJ&hl=zh-TW">谷歌学术个人主页 Google Scholar personal page</a>
+					<p><a target="blank" href="https://scholar.google.com/citations?user=FjTr1C8AAAAJ&hl=zh-TW">谷歌学术个人主页 Google Scholar personal page</a></p>
+					<p><a target="blank" href="https://informatics.xmu.edu.cn/info/1020/6333.htm">厦门大学信息学院个人主页 Personal page in Xiamen University</a></p>
 									<br><br>
 				</div>
 			</div>
@@ -175,7 +176,8 @@
 <h3>发表论著 Selected Publications</h3>
 
 <p><strong>出版专著 Book Chapters</strong></p>
-	<p>&bull; <b>Sicong Liu</b>, "Research on the Key Technologies in Narrowband Interference and Impulsive Noise Mitigation and Cancellation," <i>Springer</i>, Sep. 2020, ISBN: 978-981-15-4723-2.</p>
+	<p>&bull; <b>Sicong Liu</b>, "Research on the Key Technologies in Narrowband Interference and Impulsive Noise Mitigation and Cancellation," <i>Springer</i>, Sep. 2020, ISBN: 978-981-15-4723-2.
+		[<a target="blank" href="https://www.springer.com/gp/book/9789811547232">Abstract</a>][<a target="blank" href="papers/Springer2020.pdf">PDF</a>][<a target="blank" href="papers/Springer2020.bib">bibtex</a>]</p>
 
 	<p>&bull; <b>刘思聪</b>，杨昉，宋健，“非高斯特殊噪声干扰的抑制与消除：从经典信号处理到压缩感知方法”，北京：电子工业出版社，2019年5月</p>
 	<p>&nbsp;&nbsp;&nbsp;<b>S. Liu</b>, F. Yang, J. Song, "Non-Gaussian Noise and Interference Mitigation and Cancellation:From Classical Signal Processing to Compressed Sensing Methods," <i>Beijing: Publishing House of Electronics Industry</i>, May 2019, ISBN: 978-7-121-36455-6.</p>
