--- a/sicongliu.html
+++ b/sicongliu.html
@@ -46,7 +46,7 @@
 					<p>地址：福建省厦门市思明区厦门大学海韵园，邮编：361005</p>
 					<p>Address: Haiyun Campus, Xiamen University, Xiamen 361005, China P.R.</p>
 					<p>E-mail: 1) liusc at xmu dot edu dot cn  2) liusc1028 at gmail dot com</p>
-					<p><a target="blank" href="https://scholar.google.com/citations?user=FjTr1C8AAAAJ&hl=zh-TW">谷歌学术个人主页 Google Scholar</a></p>
+					<p><a target="blank" href="https://scholar.google.com/citations?user=FjTr1C8AAAAJ&hl=zh-TW">谷歌学术个人主页 Google Scholar</a>
 					&nbsp; &nbsp; <a target="blank" href="https://informatics.xmu.edu.cn/info/1020/6333.htm">厦门大学个人主页 Xiamen University</a></p>
 									<br><br>
 				</div>
