--- a/sicongliu.html
+++ b/sicongliu.html
@@ -45,7 +45,7 @@
 					<p>PhD, Electronic Engineering, Tsinghua University</p>
 					<p>地址：福建省厦门市思明区厦门大学海韵园，邮编：361005</p>
 					<p>Address: Haiyun Campus, Xiamen University, Xiamen 361005, China P.R.</p>
-					<p>E-mail: 1) liusc at xmu dot edu dot cn  2) liusc1028 at gmail dot com</p>
+					<p>E-mail: 1) liusc (at) xmu.edu.cn  2) liusc1028 (at) gmail.com</p>
 					<p><a target="blank" href="https://scholar.google.com/citations?user=FjTr1C8AAAAJ&hl=zh-TW">谷歌学术个人主页 Google Scholar</a>
 					&nbsp; &nbsp; <a target="blank" href="https://informatics.xmu.edu.cn/info/1020/6333.htm">厦门大学个人主页 Xiamen University</a></p>
 									<br><br>
@@ -77,6 +77,7 @@
 
 	<p>目前的研究兴趣为无线通信中的稀疏与智能方法，主要包括稀疏信号处理、压缩感知、机器学习等核心技术，及其在无线通信、可见光通信、无线安全和物联网等领域的关键应用。</p>
 
+	<p><b>招收研究生、本科毕设学生和对科研感兴趣的同学，欢迎对相关方向感兴趣的同学联系</b>（可通过上述E-mail）</p>
 
 <p><b>Sicong Liu</b> received his B.S.E. in electronic engineering from Tsinghua University, Beijing, China in 2012.
 	He received his PhD degree in electronic engineering with highest honor in Tsinghua University in 2017, supervised by Prof. Jian Song (IEEE Fellow).
@@ -97,6 +98,7 @@
 	He is a senior member of China Institute of Communications (CIC), and a member of IEEE, ACM, and China Institute of Electronics (CIE).</p>
 <p>His current research interests  lie in sparse and intelligent methods in wireless communications, mainly including key technologies of
 	sparse signal processing, compressed sensing, and machine learning, and related typical applications in wireless communications, visible light communications, wireless security, and internet of things.</p>
+	<p>Graduate and undergraduate students interested in related research fields are welcome to contact me via E-mail.</p>
 
 <h3>教育学术经历 Education and Academic Experiences</h3>
 	<p>2020年6月 - 至今 &nbsp;&nbsp; 厦门大学信息学院，<b>特聘副研究员</b></p>
@@ -238,9 +240,9 @@
 <p>&bull; <b>Sicong Liu</b>, Fang Yang, Jian Song, Jianqi Li, Weilin Liu, "<a target="blank" href="http://ieeexplore.ieee.org/xpl/articleDetails.jsp?arnumber=6883969&amp;newsearch=true&amp;queryText=An%20optimized%20time-frequency%20interleaving%20scheme%20for%20OFDM-based%20power%20line%20communication%20systems">An optimized time-frequency interleaving scheme for OFDM-based power line communication systems</a>”, in <i>Proc. IEEE International Conference on Communications (ICC)</i>, Sydney, Jun. 2014, pp. 4137-4142.</p>
 <p>&bull; <b>Sicong Liu</b>, Fang Yang, Chao Zhang, Jian Song, "<a target="blank" href="http://ieeexplore.ieee.org/xpl/articleDetails.jsp?arnumber=7037263&amp;newsearch=true&amp;queryText=Compressive%20Sensing%20Based%20Narrowband%20Interference%20Cancellation%20for%20Power%20Line%20Communication%20Systems">Compressive Sensing Based Narrowband Interference Cancellation for Power Line Communication Systems</a>”, to be published in <i>Proc. IEEE Global Communications Conference (Globecom)</i>, Austin, USA, Dec. 2014.</p>
 <p>&bull; <b>Sicong Liu</b>, Fang Yang, Jian Song, Fei Ren, Jia Li, "<a target="blank" href="http://ieeexplore.ieee.org/xpl/articleDetails.jsp?arnumber=6525859&amp;newsearch=true&amp;queryText=OFDM%20preamble%20design%20for%20synchronization%20under%20narrowband%20interference">OFDM preamble design for synchronization under narrowband interference</a>”, in <i>Proc. IEEE International Symposium on Power Line Communications (ISPLC)</i>, Johannesburg, South Africa, Mar. 2013, pp. 252-257.</p>
-<p>&bull; Jian Song, <b>Sicong Liu</b>, Guangxin Zhou, Bingyan Yu, Wenbo Ding, Fang Yang, Hongming Zhang, Xun Zhang, Amara Amara, "A cost-effective approach for ubiquitous broadband access based on hybrid PLC-VLC system", in <i>Proc. 2016 IEEE International Symposium on Circuits and Systems (ISCAS)</i>, Montreal, QC, May 2016, pp. 2815-2818.
+	<p>&bull; Jian Song, <b>Sicong Liu</b>, Guangxin Zhou, Bingyan Yu, Wenbo Ding, Fang Yang, Hongming Zhang, Xun Zhang, Amara Amara, "A cost-effective approach for ubiquitous broadband access based on hybrid PLC-VLC system", in <i>Proc. 2016 IEEE International Symposium on Circuits and Systems (ISCAS)</i>, Montreal, QC, May 2016, pp. 2815-2818.(<b>invited paper</b>)</p>
 
-<p>&bull; Tengjiao Wang, <b>Sicong Liu</b>, Fang Yang, Jintao Wang, Jian Song, Zhu Han, “Block-SparseCompressiveSensingBased Multi-User and Signal Detection for Generalized Spatial Modulation in NOMA”, accepted by <i>Proc. Wireless Communications and Mobile Computing 2017 (IWCMC’17)</i>, Valencia, Spain, 2017.
+	<p>&bull; Tengjiao Wang, <b>Sicong Liu</b>, Fang Yang, Jintao Wang, Jian Song, Zhu Han, “Block-SparseCompressiveSensingBased Multi-User and Signal Detection for Generalized Spatial Modulation in NOMA”, accepted by <i>Proc. Wireless Communications and Mobile Computing 2017 (IWCMC’17)</i>, Valencia, Spain, 2017.</p>
 
 
 <p>&bull; Wenbo Ding, Fang Yang, <b>Sicong Liu</b>, and Jian Song, “Spectrally Efficient CSI Acquisition Approach For Large-Scale MIMO Systems,” in <i>Proc. IEEE Globecom 2015</i>, San Diego, USA.</p>
@@ -291,7 +293,7 @@
 		<span id="busuanzi_container_site_uv" >| tus <span id="busuanzi_value_site_uv"></span> </span>
 		<br>
 
-		Last updatd Aug. 2020 | copyright &copy; <b>Sicong Liu</b>.
+		Last updatd Jan. 2021 | copyright &copy; <b>Sicong Liu</b>.
 	</div>
 </div>
 
